@@ -22,7 +22,6 @@ import org.eclipse.core.runtime.CoreException;
 public class FolderChangeListener implements IResourceChangeListener {
 
 	public void resourceChanged(IResourceChangeEvent event) {
-		// TODO: batch changes?
 		
 		try {
 			event.getDelta().accept(new IResourceDeltaVisitor() {
