@@ -96,6 +96,7 @@
 	* User setting for disabling automatic completion
 	* Changed a regular expression which was causing stack overflows on big inputs
 	* Interface files are now parsed with a real parser, instead of the old fuzzy one
+	* Can create custom toplevels
 	* In the toplevel, Ctrl+Enter always evaluates the expression, even when it is not terminated with ";;". This is useful to answer input queries, or when using a different syntax (revised syntax uses a single ";" for example).
 	* Changed the terminal type for toplevel, so that it doesn't try to send formatting characters  
 	* The debugger is now passed the paths defined for the project 
@@ -104,6 +105,7 @@
 	* Replaced Unix newlines by platform newlines
 	* Optimized an often used function
 	* Added 'insert spaces instead of tabulations' option for the O'Caml editor
+	* Added conversion from tabs to spaces
 	* Spell checking of comments and documentation comments
 	* Keep leading and trailing newlines as-is when formatting a selection
 	* Hyperlink on open directive opens a ".ml" file when there is no ".mli" file
@@ -116,6 +118,7 @@
 	* Opening a module's/interface's counterpart now works on external resources
 	* Fixed a layout issue in project paths properties page
 	* Improved O'Caml paths preference page
+	* Project paths are now also contributed from referenced projects
 	* Removed a check that prevented using the Cygwin version of ocamldebug on Windows
 	
 	
